Remove passthrough, adjust 2.0 actions and flows